--- a/style.css
+++ b/style.css
@@ -1,284 +1,3 @@
-/*
-* @sonuverma
-*/
-
-.app
-{
-    margin-left: 25px;
-    margin-right: 26px;
-}
-.header-container {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid grey;
-}
-.logo > img{
-    width: 90px;
-}
-
-.nav-items {
-    gap: 30px;
-    padding: 14px 29px 0px 0px;
-    font-size: 20px;
-    list-style-type: none;
-    display: flex
-;
-}
-
-
-/* resto card style */
-
-.body {
-    margin-top: 10px;
-}
-.resto-image img {
-    width: 250px;
-    height: 150px;
-}
-
-.search {
-    display: flex;
-    justify-content: center;
-}
-
-.search-input {
-    color: #848484;
-    border: 1px solid #dcd0d0;
-    border-radius: 8px;
-    width: 295px;
-    padding: 6px;
-    font-size: 13px;
-}
-
-.search-botton {
-    background: #ffc279;
-    border: none;
-    border-radius: 2px;
-    padding: 10px;
-    margin-left: -5px;
-}
-
-.resto-container {
-    margin-top: 44px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 34px;
-}
-
-.resto-card {
-    border: 1px solid;
-    width: 251px;
-    height: 310px;
-    border-radius: 9px;
-    padding: 5px;
-    line-height: 33px;
-}
-
-.card-title {
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.time-rating{
-    display: flex;
-    justify-content: space-between;
-}
-/* resto card style */
-
-
-
-/* ---------- Shimmer style ----------------*/
-.shimmer-container > div{
-    margin-top: 44px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 34px;
-}
-
-.shimmer-card {
-    width: 251px;
-    height: 310px;
-    border-radius: 9px;
-    padding: 5px;
-    line-height: 33px;
-    background-color: #f6f3f3;
-}
-.shimmer-image {
-    background: #e9e1e1 !important;
-    padding: 69px;
-    border-radius: 8px;
-}
-.shimmer-title {
-    padding: 11px;
-    background: #e9e1e1;
-    margin-top: 12px;
-    border-radius: 10px;
-}
-
-.shimmer-time-rating{
-    padding: 11px;
-    background: #e9e1e1;
-    margin-top: 12px;
-    border-radius: 10px;
-}
-
-.shimmer-cuisine{
-    padding: 11px;
-    background: #e9e1e1;
-    margin-top: 12px;
-    border-radius: 10px;
-}
-
-.shimmer-location{
-    padding: 11px;
-    background: #e9e1e1;
-    margin-top: 12px;
-    border-radius: 10px;
-}
-/* ---------- Shimmer style ----------------*/
-
-
-.clearedFilter{
-    padding: 8px;
-    background: #efefef;
-}
-.clearedFilter a {
-    color: red;
-    padding: 7px;
-    border-radius: 76px;
-}
-.searchTextSpan{
-    padding: 10px;
-}
-
-/* Shimmer page style */
-.shimmer-page-container{
-    display: grid;
-    justify-content: center;
-}
-.shimmer-div {
-    width: 51vw;
-    margin-top: 53px;
-}
-
-
-.shimmer-page-title,
-.shimmer-page-time-rating,
-.shimmer-page-menu{
-    padding: 11px;
-    /* background: #e9e1e1; */
-    margin-top: 12px;
-    border-radius: 10px;
-}
-
-.shimmer-div .shimmer-page-title {
-    padding: 40px;
-    background: #dad0d0;
-}
-
-.shimmer-page-time-rating {
-    /* padding: 50px; */
-    display: flex;
-    justify-content: space-between;  
-    overflow: overlay;
-}
-
-.shimmer-page-time-rating > div {
-    background-color: #d3c9c9;
-    padding: 10px;
-    height: 154px;
-    justify-content: space-evenly;
-    width: 198px;
-    border-radius: 13px;
-    margin-right: 11px;
-}
-.shimmer-div .shimmer-page-menu {
-    /* display: flex; */
-    /* justify-content: space-evenly; */
-}
-.shimmer-page-menu > div {
-    background-color: #d3c9c9;
-    border-radius: 13px;
-    justify-content: space-evenly;
-    margin-top: 34px;
-    margin-bottom: 13px;
-    padding: 20px;
-    border-radius: 13px;
-}
-
-.restaurant-div{
-    margin-top: 50px;
-    margin-left: 20vw;
-    margin-right: 20vw;
-}
-/* Shimmer page style */
-
-
-.distance {
-    display: inline-grid;
-    line-height: 38px;
-}
-
-.topPickImg{
-    width: 207px;
-    height: 154px;
-    border-radius: 8px;
-    margin-left: -4px;
-}
-
-
-.recommended-card .img-div > img{
-    height: 150px;
-    width: 150px;
-    border-radius: 10px;
-}
-
-.info-div > div:first-child {
-    line-height: 5px;
-}
-
-.recommended-card {
-    display: flex;
-    justify-content: space-between;
-    background: #f7f4f4;
-    padding: 20px;
-    margin-bottom: 13px;
-    border-radius: 15px;
-}
-
-.restoCardLink{
-    text-decoration: none;
-    color: black;
-}
-
-.nav-items > li > a{
-    text-decoration: none;
-    color: black;
-}
-
-.nav-items > li > a:hover{
-    color: rgb(202, 142, 87);
-}
-
-.ratingH4 span{
-    font-size: 31px;
-    color: green;
-    position: absolute;
-    margin-left: -15px;
-    margin-top: 4px;
-    font-family: system-ui;
-}
-
-
-.contact-container ul {
-    list-style: none;
-    line-height: 52px;
-    font-size: 21px;
-}
-
-.contact-top-bar{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    align-items: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
